--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.API_Testing.TestScripts.TC_4_PatchRequest</td>
+<td>com.API_Testing.TestScripts.TC_10_PostDataUsingPojo</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>updateSpecificData</td>
+<td>pojoPostTest</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -21,7 +21,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>dataForUpdate</td>
+<td>createPojoBody</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
