--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,8 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a863b6">  <td>20/05/06 17:16:59</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_4_PatchRequest.dataForUpdate()[pri:0, instance:com.API_Testing.TestScripts.TC_4_PatchRequest@2d8f65a4]">&gt;&gt;dataForUpdate</td> 
+<tr bgcolor="a863b6">  <td>20/05/06 19:45:20</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_10_PostDataUsingPojo.createPojoBody()[pri:0, instance:com.API_Testing.TestScripts.TC_10_PostDataUsingPojo@2d8f65a4]">&gt;&gt;createPojoBody</td> 
 <td>&nbsp;</td>  <td>main@1780132728</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/05/06 17:16:59</td>   <td>9</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_4_PatchRequest.updateSpecificData()[pri:0, instance:com.API_Testing.TestScripts.TC_4_PatchRequest@2d8f65a4]">updateSpecificData</td> 
+<tr bgcolor="a863b6">  <td>20/05/06 19:45:20</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_10_PostDataUsingPojo.pojoPostTest()[pri:0, instance:com.API_Testing.TestScripts.TC_10_PostDataUsingPojo@2d8f65a4]">pojoPostTest</td> 
   <td>main@1780132728</td>   <td></td> </tr>
 </table>
