--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,66 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c273d3">  <td>20/05/05 14:48:45</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06_AddValueInExsitingData.addValueExsitingData()[pri:0, instance:com.API_Testing.TestScripts.TC_06_AddValueInExsitingData@76f2b07d]">addValueExsitingData</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="998b7c">  <td>20/05/05 14:48:45</td>   <td>18</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_09CompareJSonTwoFile.comparetoJson()[pri:0, instance:com.API_Testing.TestScripts.TC_09CompareJSonTwoFile@6ee52dcd]">comparetoJson</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/05/05 14:48:26</td>   <td>-18713</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_01_PostMethods@1b68ddbd]">createData</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/05/05 14:48:29</td>   <td>-15705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@59e5ddf]">createData</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/05/05 14:48:45</td>   <td>-222</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_04_DeleteRequestData@e320068]">createData</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="a863b6">  <td>20/05/05 14:48:45</td>   <td>-98</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@1f57539]">createData</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="e3c998">  <td>20/05/05 14:48:45</td>   <td>-154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_DeleteRequestData.deleteData()[pri:0, instance:com.API_Testing.TestScripts.TC_04_DeleteRequestData@e320068]">deleteData</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="a29665">  <td>20/05/05 14:48:45</td>   <td>11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05_GetDatabyKey.fetchValuedata()[pri:0, instance:com.API_Testing.TestScripts.TC_05_GetDatabyKey@704a52ec]">fetchValuedata</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="83967b">  <td>20/05/05 14:48:45</td>   <td>-40</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_GetPerticulerIddata.getIDData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@1f57539]">getIDData</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="e87285">  <td>20/05/05 14:48:29</td>   <td>-16076</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_10_PostDataUsingPojo.pojoPostTest()[pri:0, instance:com.API_Testing.TestScripts.TC_10_PostDataUsingPojo@646d64ab]">pojoPostTest</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="c0a365">  <td>20/05/05 14:48:29</td>   <td>-15582</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07_ReplaceDynamicjSonVarialbles.replaceVarialbes()[pri:0, instance:com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles@536aaa8d]">replaceVarialbes</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
-<tr bgcolor="c09f7f">  <td>20/05/05 14:48:29</td>   <td>-15646</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_PUTRequest.updateRecord()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@59e5ddf]">updateRecord</td> 
-  <td>main@1391942103</td>   <td></td> </tr>
+<tr bgcolor="a863b6">  <td>20/05/06 20:21:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_11_AddValueInExsitingData.addValueExsitingData()[pri:0, instance:com.API_Testing.TestScripts.TC_11_AddValueInExsitingData@458c1321]">addValueExsitingData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="92be91">  <td>20/05/06 20:21:48</td>   <td>39996</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_09CompareJSonTwoFile.comparetoJson()[pri:0, instance:com.API_Testing.TestScripts.TC_09CompareJSonTwoFile@34c4973]">comparetoJson</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:08</td>   <td>36</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_01_PostMethods@11438d26]">createData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:12</td>   <td>3446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@5faeada1]">createData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@2bbf4b8b]">createData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_05_DeleteRequestData@30a3107a]">createData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_01_PostMethods.createData()[pri:0, instance:com.API_Testing.TestScripts.TC_04_PatchRequest@33c7e1bb]">createData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="c09f7f">  <td>20/05/06 20:21:12</td>   <td>3396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_10_PostDataUsingPojo.createPojoBody()[pri:0, instance:com.API_Testing.TestScripts.TC_10_PostDataUsingPojo@34cd072c]">&gt;&gt;createPojoBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/05/06 20:21:45</td>   <td>36467</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_12_CheckGitHubServer.dataForGenerate()[pri:0, instance:com.API_Testing.TestScripts.TC_12_CheckGitHubServer@1563da5]">&gt;&gt;dataForGenerate</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/05/06 20:21:48</td>   <td>39909</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_04_PatchRequest.dataForUpdate()[pri:0, instance:com.API_Testing.TestScripts.TC_04_PatchRequest@33c7e1bb]">&gt;&gt;dataForUpdate</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/05/06 20:21:48</td>   <td>39956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_04_PatchRequest.dataForUpdate()[pri:0, instance:com.API_Testing.TestScripts.TC_04_PatchRequest@33c7e1bb]">&gt;&gt;dataForUpdate</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/05/06 20:21:12</td>   <td>3446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_03_PUTRequest.dataForUpdateExisitingRecords()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@5faeada1]">&gt;&gt;dataForUpdateExisitingRecords</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/05/06 20:21:12</td>   <td>3505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_03_PUTRequest.dataForUpdateExisitingRecords()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@5faeada1]">&gt;&gt;dataForUpdateExisitingRecords</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="c6f1ae">  <td>20/05/06 20:21:48</td>   <td>39818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_05_DeleteRequestData.deleteData()[pri:0, instance:com.API_Testing.TestScripts.TC_05_DeleteRequestData@30a3107a]">deleteData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="c0a365">  <td>20/05/06 20:21:12</td>   <td>3435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_08_GetDatabyKey.fetchValuedata()[pri:0, instance:com.API_Testing.TestScripts.TC_08_GetDatabyKey@7a1ebcd8]">fetchValuedata</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="a29665">  <td>20/05/06 20:21:45</td>   <td>36468</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_12_CheckGitHubServer.generateRecordOnGitServer()[pri:0, instance:com.API_Testing.TestScripts.TC_12_CheckGitHubServer@1563da5]">generateRecordOnGitServer</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="c273d3">  <td>20/05/06 20:21:45</td>   <td>36409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_06_GetALLData.getAllRecords()[pri:0, instance:com.API_Testing.TestScripts.TC_06_GetALLData@ea1a8d5]">getAllRecords</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="998b7c">  <td>20/05/06 20:21:48</td>   <td>39726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_02_GetPerticulerIddata.getIDData()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@2bbf4b8b]">getIDData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:08</td>   <td>35</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_01_PostMethods@11438d26]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:12</td>   <td>3445</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@5faeada1]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:12</td>   <td>3505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@5faeada1]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39678</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@2bbf4b8b]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_02_GetPerticulerIddata@2bbf4b8b]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_05_DeleteRequestData@30a3107a]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39818</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_05_DeleteRequestData@30a3107a]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_04_PatchRequest@33c7e1bb]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e87285">  <td>20/05/06 20:21:48</td>   <td>39955</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TC_01_PostMethods.jsonBody()[pri:0, instance:com.API_Testing.TestScripts.TC_04_PatchRequest@33c7e1bb]">&gt;&gt;jsonBody</td> 
+<td>&nbsp;</td>  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="c09f7f">  <td>20/05/06 20:21:12</td>   <td>3397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_10_PostDataUsingPojo.pojoPostTest()[pri:0, instance:com.API_Testing.TestScripts.TC_10_PostDataUsingPojo@34cd072c]">pojoPostTest</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="83967b">  <td>20/05/06 20:21:12</td>   <td>3565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_07_ReplaceDynamicjSonVarialbles.replaceVarialbes()[pri:0, instance:com.API_Testing.TestScripts.TC_07_ReplaceDynamicjSonVarialbles@528931cf]">replaceVarialbes</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="e3c998">  <td>20/05/06 20:21:12</td>   <td>3506</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_03_PUTRequest.updateRecord()[pri:0, instance:com.API_Testing.TestScripts.TC_03_PUTRequest@5faeada1]">updateRecord</td> 
+  <td>main@490150701</td>   <td></td> </tr>
+<tr bgcolor="83bb8e">  <td>20/05/06 20:21:48</td>   <td>39956</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_04_PatchRequest.updateSpecificData()[pri:0, instance:com.API_Testing.TestScripts.TC_04_PatchRequest@33c7e1bb]">updateSpecificData</td> 
+  <td>main@490150701</td>   <td></td> </tr>
 </table>
